2011-08-23  Peter Kasting  <pkasting@google.com>

        Unreviewed, rolling out r93452.
        http://trac.webkit.org/changeset/93452
        https://bugs.webkit.org/show_bug.cgi?id=66423

        Broke Leopard, Snowleopard, and Chromium bots

        * xml/parser/XMLDocumentParserLibxml2.cpp:
        (WebCore::XMLDocumentParser::XMLDocumentParser):

2011-08-23  Ahmad Sharif  <asharif@chromium.org>

        Fixed warnings produced by gcc-4.6.0.
        https://bugs.webkit.org/show_bug.cgi?id=62168

        Reviewed by Adam Barth.

        * dom/Element.cpp:
        (WebCore::Element::recalcStyle):
        * platform/ScrollAnimatorNone.cpp:
        (WebCore::ScrollAnimatorNone::PerAxisData::curveAt):
        (WebCore::ScrollAnimatorNone::PerAxisData::curveDerivativeAt):
        * thirdparty: Copied from Source/WebCore/thirdparty.

2011-08-23  Alexandru Chiculita  <achicu@adobe.com>

        Text overlaps with the floats
        https://bugs.webkit.org/show_bug.cgi?id=66671

        The problem was that LineWidth::fitBelowFloats is not updating the m_left and m_right fields. 
        Next time LineWidth::shrinkAvailableWidthForNewFloatIfNeeded was called the width was recalculated 
        using the old values, making the line bigger.

        Reviewed by David Hyatt.

        Test: fast/block/float/fit_line_below_floats.html

        * rendering/RenderBlockLineLayout.cpp:
        (WebCore::LineWidth::fitBelowFloats):

2011-08-23  Alexandru Chiculita  <achicu@adobe.com>

        [CSSRegions] RenderFlowThread layout should use the attached region sizes
        https://bugs.webkit.org/show_bug.cgi?id=66143

        When RenderFlowThread is doing the layout it also sets the current RenderFlowThread on
        the RenderView. RenderFlowThread cannot be nested inside a single RenderView, so there's no 
        need to put that on the LayoutState.

        The right offset used to layout the inlines inside a RenderFlowThread